# nyasRayTracing

./: Buffer2D.hpp  CMakeLists.txt  Camera.hpp  GraphicsBuffer.hpp  README.md  Ray.hpp  RayHittingRecord.hpp  RenderPlane.hpp  World.hpp  examples.hpp  main.cpp  nyasRayTracing.hpp  utils.hpp
brdfs/: BRDF.hpp  Lambertian.hpp
cameras/: Camera.hpp  Parallel.hpp  Pinhole.hpp
common/: constants.hpp  fast_inversesqrt.hpp  functions.hpp  randoms.hpp  setup.h  types.hpp  vec_output.hpp
include/common/: fast_inversesqrt.h  functions.h  types.h
inline/common/: fast_inversesqrt.inl  functions.inl
objects/: Object3D.hpp  Sphere.hpp
outputs/: README.md
outputs/camera/: README.md
outputs/sampler/: README.md
samplers/: Hammersley.hpp  Jittered.hpp  MultiJittered.hpp  NRooks.hpp  PureRandom.hpp  Regular.hpp  Sampler.hpp  SamplesGenerator.hpp  test.py
skies/: NoSky.hpp  Sky.hpp  Zenith.hpp
source/: main.cpp
tracers/: HemisphereModel.hpp  RayTracer.hpp
